# dl-frameworks-course-hw

./: .gitignore  README.md  data.dvc  dvclive-optuna.dvc  homework_1.ipynb  models.dvc  pyproject.toml  start.sh
.dvc/: config
playbooks/: word2vec_params.json
support_scripts/: install_nltk_libs.sh
utils/: parsers.py  preprocess_text.py  wordtovec.py
