[tool.poetry]
name = "homework-1"
version = "0.1.0"
description = ""
authors = ["Dmitry Nesmeyanov <miradg99@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_1"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
dvc = "^2.58.2"
argparse = "^1.4.0"
nltk = "^3.8.1"
gensim = "^4.3.1"
poethepoet = "^0.20.0"
scikit-learn = "^1.2.2"
xgboost = "^1.7.5"
optuna = "^3.2.0"
dvclive = "^2.11.2"
black = "^23.3.0"
isort = "^5.12.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
install_nltk_libs = "sh support_scripts/install_nltk_libs.sh"
prepare_data = "poetry run python utils/preprocess_text.py"
